; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/rc/extr_ir-rx51.c_ir_rx51_open.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/rc/extr_ir-rx51.c_ir_rx51_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rc_dev = type { %struct.ir_rx51* }
%struct.ir_rx51 = type { i32, i32, i32 }

@EBUSY = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"pwm_get failed: %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.rc_dev*)* @ir_rx51_open to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ir_rx51_open(%struct.rc_dev* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.rc_dev*, align 8
  %4 = alloca %struct.ir_rx51*, align 8
  %5 = alloca i32, align 4
  store %struct.rc_dev* %0, %struct.rc_dev** %3, align 8
  %6 = load %struct.rc_dev*, %struct.rc_dev** %3, align 8
  %7 = getelementptr inbounds %struct.rc_dev, %struct.rc_dev* %6, i32 0, i32 0
  %8 = load %struct.ir_rx51*, %struct.ir_rx51** %7, align 8
  store %struct.ir_rx51* %8, %struct.ir_rx51** %4, align 8
  %9 = load %struct.ir_rx51*, %struct.ir_rx51** %4, align 8
  %10 = getelementptr inbounds %struct.ir_rx51, %struct.ir_rx51* %9, i32 0, i32 2
  %11 = call i64 @test_and_set_bit(i32 1, i32* %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %1
  %14 = load i32, i32* @EBUSY, align 4
  %15 = sub nsw i32 0, %14
  store i32 %15, i32* %2, align 4
  br label %40

16:                                               ; preds = %1
  %17 = load %struct.ir_rx51*, %struct.ir_rx51** %4, align 8
  %18 = getelementptr inbounds %struct.ir_rx51, %struct.ir_rx51* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @pwm_get(i32 %19, i32* null)
  %21 = load %struct.ir_rx51*, %struct.ir_rx51** %4, align 8
  %22 = getelementptr inbounds %struct.ir_rx51, %struct.ir_rx51* %21, i32 0, i32 1
  store i32 %20, i32* %22, align 4
  %23 = load %struct.ir_rx51*, %struct.ir_rx51** %4, align 8
  %24 = getelementptr inbounds %struct.ir_rx51, %struct.ir_rx51* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 4
  %26 = call i64 @IS_ERR(i32 %25)
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %39

28:                                               ; preds = %16
  %29 = load %struct.ir_rx51*, %struct.ir_rx51** %4, align 8
  %30 = getelementptr inbounds %struct.ir_rx51, %struct.ir_rx51* %29, i32 0, i32 1
  %31 = load i32, i32* %30, align 4
  %32 = call i32 @PTR_ERR(i32 %31)
  store i32 %32, i32* %5, align 4
  %33 = load %struct.ir_rx51*, %struct.ir_rx51** %4, align 8
  %34 = getelementptr inbounds %struct.ir_rx51, %struct.ir_rx51* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = load i32, i32* %5, align 4
  %37 = call i32 @dev_err(i32 %35, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i32 %36)
  %38 = load i32, i32* %5, align 4
  store i32 %38, i32* %2, align 4
  br label %40

39:                                               ; preds = %16
  store i32 0, i32* %2, align 4
  br label %40

40:                                               ; preds = %39, %28, %13
  %41 = load i32, i32* %2, align 4
  ret i32 %41
}

declare dso_local i64 @test_and_set_bit(i32, i32*) #1

declare dso_local i32 @pwm_get(i32, i32*) #1

declare dso_local i64 @IS_ERR(i32) #1

declare dso_local i32 @PTR_ERR(i32) #1

declare dso_local i32 @dev_err(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
